--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page not found</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
     <div class="errorword">
         <div class="image">
-            <img src="assets2/OBJECTS.png" alt="Under construction">
+            <img class="animate__animated animate__bounceIn" src="assets2/OBJECTS.png" alt="Under construction">
             <a href='https://www.freepik.com/vectors/business'>Created by Freepik</a>
         </div>
-        <h1>This page is under construction</h1>
     </div>
 </body>
 
