--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page not found</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <link rel="stylesheet" href="style2.css">
 </head>
 
@@ -15,14 +14,23 @@
     <div class="errorword">
         <div class="image">
             <div data-depth="0.5" class="div1">
-                <img class="animate__animated animate__bounceIn" src="assets2/OBJECTS.png" alt="Under construction">
-                <div data-depth="0.6" class="div2">
+                <img class="not-found-image" data-tilt src="assets2/OBJECTS.png" alt="Under construction">
+                <div class="div2">
                     <a href='https://www.freepik.com/vectors/business'>Created by Freepik</a>
                 </div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="vanilla-tilt.min.js"></script>
+    <script>
+        VanillaTilt.init(document.querySelector(".image"), {
+            max: 25,
+            speed: 400
+        });
+
+        //It also supports NodeList
+        VanillaTilt.init(document.querySelectorAll(".image"));
+    </script>
 </body>
 
 </html>
